# tailor

./: .gitignore  CLAUDE.md  README.md  cli.py  config.py  env.example  pyproject.toml
docs/: RESUME_BEST_PRACTICES.md  TECHNICAL_DOC.md
pipeline/: approver.py  cover_letter_generator.py  cv_generator.py  jd_parser.py  llm_client.py  loader.py  pass1_optimizer.py  pass2_reviewer.py  project_matcher.py  publisher.py  review_checkpoint.py  scorer.py  utils.py
prompts/: cover_letter_prompt.py  cv_prompt.py  generic_pass1.py  generic_pass2.py  jd_pass1.py  jd_pass2.py  resume_standards.py
