[project]
name = "tailor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "httpx>=0.28.1",
    "keybert>=0.9.0",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.13",
    "typer[all]>=0.24.1",
]
[project.scripts]
tailor = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "config.py", "pipeline", "prompts"]
